# trevm

./: Cargo.toml  laze-project.yml  precompile_wasm.rs  rebuild-all-payloads.sh
.github/workflows/: rebuild.yml
examples/: laze.yml
examples/.cargo/: config.toml
examples/async-bindings/: payload.cwasm  payload.pulley64f.cwasm
examples/async-bindings/src/: main.rs
examples/ble-scanner/: payload.cwasm
examples/ble-scanner/src/: main.rs
examples/ephemeral-no-bindings/: Cargo.toml  README.md  client.diag  laze.yml  payload.cwasm
examples/ephemeral-no-bindings/src/: main.rs
examples/ephemeral-with-bindings/: Cargo.toml  README.md  laze.yml  payload.cwasm
examples/ephemeral-with-bindings/src/: main.rs  sensor.rs
examples/fake-sensor/: Cargo.toml  README.md  laze.yml  payload.cwasm
examples/fake-sensor/src/: main.rs
examples/gpio/: payload.cwasm
examples/gpio/src/: main.rs
examples/insecure-updates/: payload1.cwasm  payload2.cwasm
examples/mpu/: Cargo.toml  laze.yml  payload.cwasm
examples/mpu/src/: main.rs  pins.rs  sensors.rs
examples/persistent-no-bindings/: Cargo.toml  README.md  client.diag  laze.yml  payload.cwasm
examples/persistent-no-bindings/src/: main.rs
examples/persistent-with-bindings/: Cargo.toml  README.md  client.diag  laze.yml  payload.cwasm
examples/persistent-with-bindings/src/: main.rs
examples/sandbox-no-bindings/: Cargo.toml  README.md  fib-10.cwasm  fib-30.cwasm  laze.yml
examples/sandbox-no-bindings/src/: main.rs
examples/simple-updates/: payload1.cwasm
examples/suit-updatable/: Cargo.toml  README.md  laze.yml  payload.cwasm
examples/suit-updatable/src/: coap_fetch.rs  main.rs  suit.rs
examples/suit-updatable/suit/: demo-private-key.pem  demo-public-key-p256.pem  manifest.json
examples/udp-bindings/: payload.cwasm
examples/udp-bindings/src/: main.rs
payloads/ble-scanner/src/: lib.rs
payloads/ephemeral-no-bindings/: Cargo.toml
payloads/ephemeral-no-bindings/src/: lib.rs
payloads/ephemeral-with-bindings/: Cargo.toml
payloads/ephemeral-with-bindings/src/: lib.rs
payloads/gpio/src/: lib.rs
payloads/persistent-no-bindings/src/: lib.rs
payloads/persitent-no-bindings/: Cargo.toml
payloads/persitent-no-bindings/src/: lib.rs
payloads/persitent-with-bindings/: Cargo.toml
payloads/persitent-with-bindings/src/: lib.rs
payloads/sandbox-no-bindings/: Cargo.toml
payloads/sandbox-no-bindings/src/: lib.rs
payloads/sensors/: Cargo.toml
payloads/sensors/src/: lib.rs
src/ariel-os-bindings/: Cargo.toml
src/ariel-os-bindings/src/wasm/: coap_server_guest.rs  gpio.rs  log.rs  mod.rs  rng.rs  sensors.rs  time.rs  udp.rs
src/ariel-os-bindings/src/wasm/coap/: coap_server_guest.rs  coap_traits.rs  mod.rs  sanbdox.rs
wit/: example-ephemeral.wit  example-persistent.wit  example-sensors.wit
