[workspace]
members = ["examples/*", "src/ariel-os-bindings"]

exclude = ["build/", "payloads/"]
resolver = "3"

[workspace.package]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
# Ariel OS imports
ariel-os = { path = "build/imports/ariel-os/src/ariel-os" }
ariel-os-alloc = { path = "build/imports/ariel-os/src/ariel-os-alloc", default-features = false }
ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards", default-features = false }
ariel-os-debug = { path = "build/imports/ariel-os/src/ariel-os-debug", default-features = false }
ariel-os-embassy = { path = "build/imports/ariel-os/src/ariel-os-embassy", default-features = false }
ariel-os-coap = { path = "build/imports/ariel-os/src/ariel-os-coap", default-features = false }
ariel-os-random = { path = "build/imports/ariel-os/src/ariel-os-random", default-features = false }
ariel-os-hal = { path = "build/imports/ariel-os/src/ariel-os-hal", default-features = false }
ariel-os-sensors = { path = "build/imports/ariel-os/src/ariel-os-sensors", default-features = false }
ariel-os-sensors-registry = { path = "build/imports/ariel-os/src/ariel-os-sensors-registry", default-features = false }

wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "3dc6b5ec5572ab8b304c668d5b929bbc7f49cbcf", default-features = false, features = [
  "pulley",
  "runtime",
  "component-model",
] }

embassy-futures = { version = "0.1.1", default-features = false }

rand_core = { version = " 0.6.4", default-features = false }

trouble-host = { version = "0.5.0" }


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }
